Fix scrollbar hide when nested

--- a/jquery.scrollable.css
+++ b/jquery.scrollable.css
@@ -82,13 +82,13 @@
     bottom: 16px;
 }
 
-.scrollable.autohide .scrollbar {
+.scrollable.autohide > .scrollbar {
     filter : alpha(opacity=0);
     opacity : 0;
 }
 
-.scrollable.autohide .scrollbar.scrolling,
-.scrollable.autohide.hover .scrollbar {
+.scrollable.autohide > .scrollbar.scrolling,
+.scrollable.autohide.hover > .scrollbar {
     filter : alpha(opacity=100);
     opacity : 1;
 }
